error returned if job found and status is cancelled or failed (#67)
* error returned if job found and status is cancelled or failed

* rename function